ドメイン層とアプリケーション層のコードを変更