@@ -1,10 +1,8 @@
 package io.github.wtbyt298.accountbook.domain.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-
 import io.github.wtbyt298.accountbook.domain.model.accounttitle.AccountTitle;
 import io.github.wtbyt298.accountbook.domain.model.accounttitle.AccountTitleRepository;
 import io.github.wtbyt298.accountbook.domain.model.journalentry.EntryDetail;
@@ -25,29 +23,35 @@ public class JournalEntrySpecification {
 	 * @return 全ての仕訳明細が貸借の組み合わせ条件を満たしている場合true
 	 */
 	public boolean isSatisfied(JournalEntry entry) {
-		List<EntryDetail> debitDetails = filterToDebitDetails(entry.entryDetails());
-		List<EntryDetail> creditDetails = filterToCreditDetails(entry.entryDetails());
+		List<AccountTitle> debitAccountTitles = fetchDebitAccountTitles(entry.entryDetails());
+		List<AccountTitle> creditAccountTitles = fetchCreditAccountTitles(entry.entryDetails());
 		//借方の勘定科目に対して、貸方の勘定科目が組み合わせ可能かどうかを全て調べる
-		for (EntryDetail debit : debitDetails) {
-			for (EntryDetail credit : creditDetails) {
-				AccountTitle debitAccountTitle = accountTitleRepository.findById(debit.accountTitleId());
-				AccountTitle creditAccountTitle = accountTitleRepository.findById(credit.accountTitleId());
-				if (! debitAccountTitle.canCombineWith(creditAccountTitle)) return false;
-			}
-		}
-		return true;
+		return debitAccountTitles.stream()
+			.allMatch(each -> ok(each, creditAccountTitles));
 	}
 	
-	private List<EntryDetail> filterToDebitDetails(List<EntryDetail> elements) {
-		return elements.stream()
-				       .filter(each -> each.isDebit())
-					   .collect(Collectors.toList());
+	private boolean ok(AccountTitle debit, List<AccountTitle> creditAccountTitles) {
+		return creditAccountTitles.stream().allMatch(each -> debit.canCombineWith(each));
 	}
 	
-	private List<EntryDetail> filterToCreditDetails(List<EntryDetail> elements) {
+	/**
+	 * 仕訳明細の借方の勘定科目のみを取り出したリストを返す
+	 */
+	private List<AccountTitle> fetchDebitAccountTitles(List<EntryDetail> elements) {
 		return elements.stream()
-				       .filter(each -> each.isCredit())
-					   .collect(Collectors.toList());
+	       .filter(each -> each.isDebit())
+	       .map(each -> accountTitleRepository.findById(each.accountTitleId()))
+	       .toList();
+	}
+	
+	/**
+	 * 仕訳明細の貸方の勘定科目のみを取り出したリストを返す
+	 */
+	private List<AccountTitle> fetchCreditAccountTitles(List<EntryDetail> elements) {
+		return elements.stream()
+	       .filter(each -> each.isCredit())
+	       .map(each -> accountTitleRepository.findById(each.accountTitleId()))
+	       .toList();
 	}
 	
 }
